--- a/AudioAddin/AudioAddin.csproj
+++ b/AudioAddin/AudioAddin.csproj
@@ -60,6 +60,10 @@
     <Reference Include="NAudio.WinMM, Version=2.2.1.0, Culture=neutral, PublicKeyToken=e279aa5131008a41, processorArchitecture=MSIL">
       <HintPath>packages\NAudio.WinMM.2.2.1\lib\netstandard2.0\NAudio.WinMM.dll</HintPath>
     </Reference>
+    <Reference Include="Nice3point.Revit.Toolkit, Version=2020.1.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Nice3point.Revit.Toolkit.2020.1.0\lib\net47\Nice3point.Revit.Toolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="RevitAPI, Version=22.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>packages\ModPlus.Revit.API.2022.4.0.0\lib\RevitAPI.dll</HintPath>
     </Reference>
@@ -72,6 +76,7 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
@@ -84,12 +89,17 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioAddinApp.cs" />
+    <Compile Include="AudioCommandPlay.cs" />
     <Compile Include="AudioAddinUpdater.cs" />
-    <Compile Include="AudioAddinCommand.cs" />
+    <Compile Include="AudioCommandRecord.cs" />
+    <Compile Include="ExternalEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecordWav.cs" />
+    <Compile Include="RevitApiCommon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
