--- a/AudioAddin/packages.config
+++ b/AudioAddin/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JetBrains.Annotations" version="2022.3.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="ModPlus.Revit.API.2022" version="4.0.0" targetFramework="net481" />
@@ -10,6 +11,7 @@
   <package id="NAudio.Wasapi" version="2.2.1" targetFramework="net481" />
   <package id="NAudio.WinForms" version="2.2.1" targetFramework="net481" />
   <package id="NAudio.WinMM" version="2.2.1" targetFramework="net481" />
+  <package id="Nice3point.Revit.Toolkit" version="2020.1.0" targetFramework="net48" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
