--- a/AudioAddin/AudioAddin.csproj
+++ b/AudioAddin/AudioAddin.csproj
@@ -94,12 +94,10 @@
   <ItemGroup>
     <Compile Include="AudioAddinApp.cs" />
     <Compile Include="AudioCommandPlay.cs" />
-    <Compile Include="AudioAddinUpdater.cs" />
     <Compile Include="AudioCommandRecord.cs" />
-    <Compile Include="ExternalEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordWav.cs" />
-    <Compile Include="RevitApiCommon.cs" />
+    <Compile Include="ExtensibleStorageUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
